--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -336,7 +336,7 @@ button {
   display: block;
   text-decoration: none;
   cursor: pointer;
-  background-color: #0000ff;
+  background-color: #ffff00;
   color: #fff;
   font-size: 24px;
   line-height: 1.54167;
